package com.lft.uml.p2_generalization;

/**
 * Function: 		ADD FUNCTION.
 * Reason:   		ADD REASON.
 * Date:            2020/9/6 21:19
 * E-mail:			laifengting@foxmail.com
 * <p>
 * Class Name:      DaoSupport
 * Package Name:    com.lft.uml.generalization
 * @author Laifengting
 * @version 1.0.0
 * @since JDK 8
 */
public abstract class DaoSupport {
	public void save(Object entity) {
	}
	
	public void delete(Object id) {
	}
}
